--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,5 @@ remove=Remover
 taste.placeholder=Ingres una palabra clave
 add.taste=Agregar interes
 submit=Enviar
+upload.io.exception=Un error ocurrio tratando de subir el archivo. Por favor, intenta nuevamente.
+upload.file.too.big=El archivo es demasiado grande.
