--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 Size.profileForm.twitterHandle=Por favor escribi tu nombre de usuario en twitter
 Email.profileForm.email=Por favor especificar una direccion de email valida
-NotEmpty.profileForm.email=Por favor especifica tu dirección de email
+NotEmpty.profileForm.email=Por favor especifica tu direccion de email
 PastLocalDate.profileForm.birthDate=Por favor especifica una fecha de nacimiento válida
 NotNull.profileForm.birthDate=Por favor especifica tu fecha de nacimiento
 typeMismatch.birthDate = Formato de fecha de nacimiento invalida
@@ -16,3 +16,4 @@ add.taste=Agregar interes
 submit=Enviar
 upload.io.exception=Un error ocurrio tratando de subir el archivo. Por favor, intenta nuevamente.
 upload.file.too.big=El archivo es demasiado grande.
+upload=Subir
